samples/_failures_safe/1761659586_2de31f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_feef097d.c: In function ‘execute_graph_operation’:
./samples/SAFE/__tmp_feef097d.c:160:25: error: missing terminating " character
  160 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_feef097d.c:160:9: error: expected expression at end of input
  160 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_feef097d.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_feef097d.c:160:9: error: expected declaration or statement at end of input
